<resources>
    <string name="app_name">Food Rescue by Khanh Do</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="change_password">Change password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="add_image">Add image</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="des">Description</string>
    <string name="date">Date</string>
    <string name="time">Pick up time</string>
    <string name="quantity">Quantity</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="change_image">Change image</string>
    <string name="remember_me">Remember login?</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log out</string>
    <string name="change_info">Edit profile</string>
    <string name="cart">Add to cart</string>
    <string name="total">Total:</string>
    <string name="sold_out">SOLD OUT</string>
    <string name="settings">Settings</string>
    <string name="fingerprint_settings">Login with biometric</string>
    <string name="chat">Get help</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dollar">$</string>
</resources>
